[gd_scene load_steps=4 format=3 uid="uid://m3v11vm16l8y"]

[ext_resource type="Script" uid="uid://edcww4owyx04" path="res://addons/parley/components/node/node_editor.gd" id="1_g4urk"]
[ext_resource type="Texture2D" uid="uid://dres8tr2nd82o" path="res://addons/parley/assets/Remove.svg" id="2_bbjsx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l4dko"]
bg_color = Color(0.658824, 0.313726, 0.0470588, 1)

[node name="NodeEditor" type="VBoxContainer"]
offset_right = 125.0
offset_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_g4urk")

[node name="TitleContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TitlePanelContainer" type="PanelContainer" parent="TitleContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_l4dko")

[node name="TitleMarginContainer" type="MarginContainer" parent="TitleContainer/TitlePanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 1

[node name="TitlePartsContainer" type="HBoxContainer" parent="TitleContainer/TitlePanelContainer/TitleMarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="TitleContainer/TitlePanelContainer/TitleMarginContainer/TitlePartsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Unknown [ID: ]"

[node name="DeleteNodeButton" type="Button" parent="TitleContainer/TitlePanelContainer/TitleMarginContainer/TitlePartsContainer"]
layout_mode = 2
tooltip_text = "Delete the selected node."
icon = ExtResource("2_bbjsx")
flat = true

[node name="BodyMarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="BodyScrollContainer" type="ScrollContainer" parent="BodyMarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="BodyContainer" type="VBoxContainer" parent="BodyMarginContainer/BodyScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="TitleContainer/TitlePanelContainer/TitleMarginContainer/TitlePartsContainer/DeleteNodeButton" to="." method="_on_delete_node_button_pressed"]
